# handsfree_gui

./: .gitignore  CMakeLists.txt  README.md  gui_v2.pro
image/: image.qrc.depends
lib/handsfree_hw/: CMakeLists.txt  handsfree_hw.cbp
lib/handsfree_hw/_drafts/: test.markdown
lib/handsfree_hw/include/handsfree_hw/: hf_hw.h  transport.h  transport_serial.h
lib/handsfree_hw/src/: hf_hw.cpp  transport_serial.cpp
lib/qcustomplot/: CMakeLists.txt
mainwindow/: mainwindow.cpp  mainwindow.h
mainwindow/ui/: mainwindow.ui
robot/: command.h  command_factory.h  expect_list.h  measure_list.h  read_thread.cpp  read_thread.h  robot_commands.cpp  robot_commands.h  robot_hardware.cpp  robot_hardware.h
robot/expect/: expect_armstate.h  expect_globalspeed.h  expect_headstate.h  expect_motorparameter.h  expect_motorspeed.h  expect_robotspeed.h
robot/measure/: measure_globalcoordinate.h  measure_globalspeed.h  measure_moterspeed.h  measure_robotcoordinate.h  measure_robotspeed.h  measure_systeminfo.h
sdk/handsfree_sdk/handsfree_hw/: hf_hw.h
sdk/handsfree_sdk/hf_link/: hf_link.h
util/factory/: linefactory.h  treeitem_factory.h
util/sliding/: sliding_moudle.cpp  sliding_moudle.h  sliding_stackedwidget.cpp  sliding_stackedwidget.h
util/ui/: availablecommand_list.ui  button_listwidgetitem.ui
util/widgets/: availablecommand_list.cpp  availablecommand_list.h  button_listwidgetitem.cpp  button_listwidgetitem.h  combobox_serial.cpp  combobox_serial.h  radar_pos.cpp  radar_pos.h  switch_button.cpp  switch_button.h
widget_command/: widget_command.cpp  widget_command.h
widget_command/ui/: widget_command.ui
widget_control/: widget_control.cpp  widget_control.h
widget_control/ui/: widget_control.ui
widget_param/: widget_param.cpp  widget_param.h
widget_param/ui/: widget_param.ui
widget_visualization/: widget_plot.cpp  widget_plot.h  widget_visualization.cpp  widget_visualization.h
widget_visualization/ui/: widget_visualization.ui
